<resources>
    <string name="app_name">ServiFumi Técnicos</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="home">Inicio</string>
    <string name="descargar">Descargar</string>
    <string name="programacion_dia">Programación del Día</string>
    <string name="salir">Salir</string>
    <string name="acerca_de">Acerca de...</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>
    <string name="subir_informacion">Enviar</string>
    <string name="constancia_sf">Constancia Fumi</string>
    <string name="constancia_pp">Constancia Plata</string>
    <string name="bienvenido">BIENVENIDO</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hint_usuario">Usuario</string>
    <string name="hint_password">Password</string>
    <string name="acceder">Acceder</string>
    <string name="title_activity_descargar">Descargar Datos</string>
    <string name="title_activity_descarga">Descargar Datos</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="action_example">Example action</string>
    <string name="sincronizar_antes_de_descargar">Para descargar la Programacion necesita enviar antes su informacion para no perderla*</string>
    <string name="catalogos">CATALOGOS</string>
    <string name="descargar_todo">DESCARGAR TODO</string>
    <string name="programacion">PROGRAMACION</string>
    <string name="statuscatalogos">statusCatalogos</string>
    <string name="statusprogramacion">statusProgramacion</string>
    <string name="statustodo">statusTodo</string>
    <string name="logo_2sis">logo_2sis</string>
    <string name="empresa">2SIS E-VOLUCIONA</string>
    <string name="correo_empresa">contacto@2sis.com.mx</string>
    <string name="facebook_empresa">https://www.facebook.com/2sisEvoluciona</string>
    <string name="telefonos_empresa">(981)8167139,1453544,1440837 y sin costo 018002120545</string>
    <string name="direccion_empresa">Calle Justo Sierra No, 22 entre Calle 16 y Pablo García, Col. San Román C.P. 24040 Campeche, Camp, MX</string>
    <string name="logo_servifumi">logo_servifumi</string>
    <string name="logo_plata">logo_plata</string>
    <string name="title_activity_programacion">Programaciones</string>
    <string name="title_activity_programacion_detalle">Detalles de Programacion</string>
    <string name="telefonos">Telefonos:</string>
    <string name="llamar">Llamar</string>
    <string name="pdf_plata">Insp. Plata</string>
    <string name="pdf_fumi">Insp. Plagas</string>
    <string name="croquis">Croquis</string>
    <string name="imposible_realizar">¿Imposible Realizar?</string>
    <string name="observacion_visita">Motivos Reprogramacion</string>
    <string name="guardar_motivos">Guardar Motivos</string>
    <string name="numeros_cliente">Teléfonos Cliente:</string>
    <string name="sin_realizar">Sin Realizar</string>
    <string name="realizada">Realizada</string>
    <string name="title_activity_constancia_plata">Constancias PlataPlus</string>
    <string name="sin_enviar">Sin Enviar</string>
    <string name="enviados">Enviados</string>
    <string name="title_activity_constancia_plata_formulario">Nueva Constancia PlataPlus</string>
    <string name="fecha">FECHA*</string>
    <string name="modificar_fecha">MODIFICAR FECHA</string>
    <string name="cliente">CLIENTE*</string>
    <string name="constancia_pp_utiliza">¿Qué utilizó?</string>
    <string name="plata_coloidal">P. Coloidal</string>
    <string name="hipoclorito">Hipoclorito</string>
    <string name="desincrustante">Desincrus.</string>
    <string name="contacto">CONTACTO</string>
    <string name="constancia_pp_aplica">¿Qué aplicó?</string>
    <string name="asperjado">Asperjado</string>
    <string name="rodillo">Rodillo</string>
    <string name="directo">Directo</string>
    <string name="modificar_hora">MODIFICAR HORA</string>
    <string name="hora_entrada">HORA ENTRADA*</string>
    <string name="hora_salida">HORA SALIDA*</string>
    <string name="constancia_pp_material">Material del Tanque</string>
    <string name="pvc">PVC</string>
    <string name="fibrocemento">FIBROCEMENTO</string>
    <string name="otro">OTRO</string>
    <string name="material_otro">Tipo Material*</string>
    <string name="observaciones">OBSERVACIONES</string>
    <string name="liquidado">¿Servicio Liquidado?</string>
    <string name="dinero_recibido">DINERO RECIBIDO</string>
    <string name="firma">FIRMA DEL CLIENTE*</string>
    <string name="constancia_pp_tanques">TANQUES TRABAJADOS*</string>
    <string name="seleccionar_tanques">SELECCIONAR TANQUES</string>

    <string name="firma_hint_sign">Capturar Firma</string>
    <string name="firma_dialog_title">FIRMA AQUÍ</string>
    <string name="firma_hint_cancel">Cancelar</string>
    <string name="firma_hint_clear">Limpiar</string>
    <string name="firma_hint_save">Guardar</string>
    <string name="cantidad">Cantidad</string>
    <string name="title_activity_constancia_fumi">Constancias Fumi</string>
    <string name="title_activity_constancia_fumi_formulario">Nueva Constancia Fumi</string>
    <string name="constancia_sf_plagas">PLAGAS TRABAJADAS*</string>
    <string name="constancia_sf_productos">PRODUCTOS USADOS*</string>
    <string name="tipo_instalacion">TIPO INSTALACION*</string>
    <string name="constancia_sf_areas">¿Qué áreas trabajó?</string>
    <string name="area_interior">Interior</string>
    <string name="area_exterior">Exterior</string>
    <string name="area_vehiculo">Vehículo</string>
    <string name="tipo_servicio">TIPO DE SERVICIO*</string>
    <string name="tipo_servicio_otro">OTRO SERVICIO*</string>
    <string name="constancia_sf_aplicacion">¿Qué aplicó?</string>
    <string name="aspersion">Aspersión</string>
    <string name="micronizacion">Microniz.</string>
    <string name="termoneb">Termone.</string>
    <string name="inyeccion">Inyección</string>
    <string name="constancia_sf_colocacion">¿Qué colocó?</string>
    <string name="cebo_roden">Cebo rodent</string>
    <string name="cebo_gel">Cebo gel</string>
    <string name="trampas">Trampas</string>
    <string name="modo_pago">FORMA DE PAGO</string>
    <string name="constancia_sf_vehiculos">VEHICULOS TRABAJADOS*</string>
    <string name="hint_marca">MARCA*</string>
    <string name="hint_matricula">MATRICULA*</string>
    <string name="hint_num_economico">NUM ECONOMICO</string>
    <string name="guardar">GUARDAR</string>
    <string name="limpiar">LIMPIAR</string>
    <string name="title_activity_enviar">Enviar Datos</string>
    <string name="enviar">ENVIAR TODO</string>
    <string name="constancia_sf_accesorios">ACCESORIOS ASIGNADOS*</string>
    <string name="saldo_constancia">SALDO:</string>
    <string name="area_area">Área Detallada</string>
    <string name="constancia_sf_areas_detalladas">ÁREAS TRABAJADAS*</string>
    <string name="hint_area_nombre">NOMBRE*</string>
</resources>
