<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_descarga"
            android:icon="@drawable/ic_descarga"
            android:title="@string/descargar" />
        <item
            android:id="@+id/nav_programacion"
            android:icon="@drawable/ic_programacion"
            android:title="@string/programacion_dia" />
        <item
            android:id="@+id/nav_constancia_sf"
            android:icon="@drawable/ic_constancia_sf"
            android:title="@string/constancia_sf" />
        <item
            android:id="@+id/nav_constancia_pp"
            android:icon="@drawable/ic_constancia_pp"
            android:title="@string/constancia_pp" />
        <item
            android:id="@+id/nav_subida"
            android:icon="@drawable/ic_subida"
            android:title="@string/subir_informacion" />
    </group>

    <item android:title="@string/salir">
        <menu>
            <item
                android:id="@+id/nav_acerca"
                android:icon="@drawable/ic_acerca"
                android:title="@string/acerca_de" />
            <item
                android:id="@+id/nav_salir"
                android:icon="@drawable/ic_salir"
                android:title="@string/cerrar_sesion" />
        </menu>
    </item>

</menu>
