<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/firma_dialog_title"
        android:textColor="@color/colorNegro" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:weightSum="3">

        <Button
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/firma_hint_cancel"
            android:textColor="@color/colorNegro"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/clear"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/firma_hint_clear"
            android:textColor="@color/colorNegro"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/getsign"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/firma_hint_save"
            android:textColor="@color/colorNegro"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_sf"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        android:orientation="vertical" />

</LinearLayout>