<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.LoginActivity"
    tools:showIn="@layout/activity_login">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivIcono"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            app:srcCompat="@mipmap/fondo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivUsuario"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="10"
                app:srcCompat="@drawable/ic_usuario" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilUsuario"
                style="@style/TIL">

                <EditText
                    android:id="@+id/etUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hint_usuario"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="10"
                app:srcCompat="@drawable/ic_password" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPassword"
                style="@style/TIL">

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            style="@style/ButtonMaterial"
            android:text="@string/acceder" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>